@@ -1,3 +1,5 @@
+- New feature: Added object-profile cache to improve performance
+
 1.7.1 (15-02-2021)
 - Bug fix: Fixed bug in contains object
 - Bug fix: Fixing SpotBugs issue (SE_BAD_FIELD)
